refactor(stream): Stream.toList()를 사용하여 코드 간결성 및 안정성 향상